--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,73 +1,54 @@
 .header {
   width: 100%;
-  height: 100px;
-  /* border: 1px solid greenyellow; */
+  height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 50px;
+  padding: 0 5%;
   position: sticky;
   top: 0;
   z-index: 999;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(50px);
 }
 
-.header .logo-text {
-  width: 17%;
-  /* border: 1px solid yellow; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .header .logo-text h2 {
-  font-size: 25px;
-  font-weight: 500;
-}
-
-.header .navbar {
-  width: 60%;
-  /* border: 1px solid yellow; */
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  font-size: 24px;
+  font-weight: 600;
+  color: white;
 }
 
 .header .navbar ul {
-  list-style-type: none;
+  list-style: none;
   display: flex;
-}
-
-.header .navbar ul li {
-  font-size: 20px;
+  gap: 20px;
 }
 
 .header .navbar ul li a {
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
-  padding: 16px;
-  font-weight: 300;
+  padding: 10px;
+  font-weight: 400;
+  transition: color 0.3s;
 }
 
-.header .contact-btn {
-  width: 10%;
-  /* border: 1px solid yellow; */
-  display: flex;
-  align-items: center;
+.header .navbar ul li a:hover {
+  color: rgb(69, 146, 218);
 }
 
 .header .contact-btn button {
   font-size: 15px;
   background-color: rgb(69, 146, 218);
-  color: #ffffff;
-  border: none;
-  padding: 4px 12px;
-  border-radius: 3px;
+  color: #fff;
   border: 1px solid rgb(69, 146, 218);
-  transition: background-color 0.3s ease;
+  padding: 6px 14px;
+  border-radius: 5px;
+  transition: 0.3s ease;
 }
+
 .header .contact-btn button:hover {
   background-color: transparent;
+  color: rgb(69, 146, 218);
   cursor: pointer;
 }
+/* Header Styles */
